--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <div class="carousel-item active">
                         <div class="experience-panel text-center">
                             <h4>Mobile Application Developer</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i> المصدر لتقنية المعلومات | SIT | <i class="fas fa-calendar-alt"></i> May 2025 - Present</p>
+                            <p class="text-muted mb-2">المصدر لتقنية المعلومات | SIT | May 2025 - Present</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                     <div class="carousel-item">
                         <div class="experience-panel text-center">
                             <h4>Flutter Developer</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Freelance | <i class="fas fa-calendar-alt"></i> Dec 2023 - Present</p>
+                            <p class="text-muted mb-2">Freelance | Dec 2023 - Present</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
@@ -345,6 +345,13 @@
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
                     <i class="fas fa-award"></i>
                     <h4><strong><a href="https://www.udemy.com/certificate/UC-ce760d44-452b-4d40-a779-92b0692a365d/" target="_blank">Mastering Programming: A Comprehensive Course In [Arabic]</a></strong></h4>
+                        <p class="text-muted mb-0">Issued by: Udemy</p>
+                </div>
+                <!-- Certificate 4 -->
+                <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
+                    <i class="fas fa-award"></i>
+                    <h4><strong><a href="https://www.udemy.com/certificate/UC-b9ead548-e12d-44db-8a79-74d6126ffde6/" target="_blank">
+Master Git & GitHub: Essential Skills for Developers[Arabic]</a></strong></h4>
                         <p class="text-muted mb-0">Issued by: Udemy</p>
                 </div>
             </div>
