--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <div class="carousel-item active">
                         <div class="experience-panel text-center">
                             <h4>Mobile Application Developer</h4>
-                            <p class="text-muted mb-2">المصدر لتقنية المعلومات | SIT | May 2025 - Present</p>
+                            <p class="text-muted mb-2">المصدر لتقنية المعلومات - SIT | May 2025 - Present</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
