--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                         <div class="experience-panel text-center">
                             <h4>Mobile Application Developer</h4>
                             <p class="text-muted mb-2">المصدر لتقنية المعلومات - SIT | May 2025 - Present</p>
-                            <p class="text-muted">At a software development company specializing in building custom systems and applications for businesses, I contributed to designing and developing digital solutions tailored to each client’s operational needs. Our mission was to digitize workflows, solve critical business challenges, and enhance efficiency through scalable and user-centric software.</p>
-                            <p class="text-muted">My responsibilities included collaborating with cross-functional teams to analyze business requirements, architect system functionalities, and deliver robust applications that streamline internal processes and improve customer experiences.</p>
+                            <p class="text-muted text-start">At a software development company specializing in building custom systems and applications for businesses, I contributed to designing and developing digital solutions tailored to each client’s operational needs. Our mission was to digitize workflows, solve critical business challenges, and enhance efficiency through scalable and user-centric software.</p>
+                            <p class="text-muted text-start">My responsibilities included collaborating with cross-functional teams to analyze business requirements, architect system functionalities, and deliver robust applications that streamline internal processes and improve customer experiences.</p>
                         </div>
                     </div>
                     <!-- Experience 2 -->
@@ -306,7 +306,7 @@
                         <div class="experience-panel text-center">
                             <h4>Flutter Developer</h4>
                             <p class="text-muted mb-2">Freelance | Dec 2023 - Present</p>
-                            <p class="text-muted">As a freelance Flutter developer, I build custom mobile apps that help businesses digitize their operations, solve real problems, and improve efficiency. I work closely with clients to turn their workflows into smart, scalable solutions—whether for delivery tracking, exam systems, or internal business tools. Using Flutter, Firebase, and real-time technologies, I deliver clean, user-friendly apps that save time and support growth.</p>
+                            <p class="text-muted text-start">As a freelance Flutter developer, I build custom mobile apps that help businesses digitize their operations, solve real problems, and improve efficiency. I work closely with clients to turn their workflows into smart, scalable solutions—whether for delivery tracking, exam systems, or internal business tools. Using Flutter, Firebase, and real-time technologies, I deliver clean, user-friendly apps that save time and support growth.</p>
                         </div>
                     </div>
                     <!-- Add more carousel-item divs for more experiences -->
