--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         .certificate-item i {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            color: #D4AF37; /* Golden color */
+            color: #D4AF37 !important;
         }
         /* Experience Carousel Styles */
         .experience-panel {
