--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             position: relative;
             z-index: 2;
         }
+        /* This ensures the menu button is always clickable */
+        .menu-toggle {
+            z-index: 3;
+        }
         .slider-container {
             height: 45px; /* Adjust height based on your font size */
             overflow: hidden;
