--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             position: relative; /* Needed for the overlay */
             background-size: cover;
             background-position: right;
+            z-index: 1;
         }
         /* Add a dark overlay to make text more readable */
         .masthead::before {
