--- a/index.html
+++ b/index.html
@@ -252,12 +252,14 @@
                 <!-- Project 1 -->
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="#!" 
-                       data-bs-toggle="modal" 
-                       data-bs-target="#portfolioModal"
-                       data-title="E-commerce App"
-                       data-video="https://www.youtube.com/embed/ysz5S6PUM-U"
-                       data-images="https://placehold.co/600x400/1D809F/white?text=App+Screenshot+1,https://placehold.co/600x400/1D809F/white?text=App+Screenshot+2"
-                       data-description="Developed a full-featured e-commerce mobile application for a fashion brand. Implemented secure payment gateway, real-time inventory tracking, and a personalized user dashboard. The app led to a 40% increase in mobile sales.">
+                        data-bs-toggle="modal" 
+                        data-bs-target="#portfolioModal"
+                        data-title="E-commerce App"
+                        data-video="https://www.youtube.com/embed/ysz5S6PUM-U"
+                        data-images="https://placehold.co/600x400/1D809F/white?text=App+Screenshot+1,https://placehold.co/600x400/1D809F/white?text=App+Screenshot+2"
+                        data-description="Developed a full-featured e-commerce mobile application for a fashion brand. Implemented secure payment gateway, real-time inventory tracking, and a personalized user dashboard. The app led to a 40% increase in mobile sales."
+                        data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
+                        data-app-store="YOUR_APP_STORE_LINK_HERE">
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">E-commerce App</div>
@@ -275,7 +277,9 @@
                        data-title="Booking System"
                        data-video="https://www.youtube.com/embed/9YffrCViTVk"
                        data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
-                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%.">
+                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
+                       data-google-play=""
+                       data-app-store="YOUR_APP_STORE_LINK_HERE">
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">Clinic Booking System</div>
