--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ Master Git & GitHub: Essential Skills for Developers[Arabic]</a></strong></h4>
                 behanceBtn.href = behanceLink;
                 behanceBtn.className = 'btn btn-dark me-2';
                 behanceBtn.target = '_blank';
-                behanceBtn.innerHTML = '<i class="fab fa-behance"></i> View on Behance';
+                behanceBtn.innerHTML = '<i class="fab fa-behance"></i>';
                 modalStoreLinks.appendChild(behanceBtn);
             }
             if (googlePlayLink && googlePlayLink.trim() !== '') {
