--- a/index.html
+++ b/index.html
@@ -254,20 +254,20 @@
                     <a class="portfolio-item" href="#!" 
                         data-bs-toggle="modal" 
                         data-bs-target="#portfolioModal"
-                        data-title="E-commerce App"
-                        data-video="https://www.youtube.com/embed/ysz5S6PUM-U"
+                        data-title="Yamakan App"
+                        data-video=""
                         data-images="https://placehold.co/600x400/1D809F/white?text=App+Screenshot+1,https://placehold.co/600x400/1D809F/white?text=App+Screenshot+2"
                         data-description="Developed a full-featured e-commerce mobile application for a fashion brand. Implemented secure payment gateway, real-time inventory tracking, and a personalized user dashboard. The app led to a 40% increase in mobile sales."
                         data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
                         data-app-store="YOUR_APP_STORE_LINK_HERE"
-                        data-behance="YOUR_BEHANCE_LINK_HERE">
+                        data-behance="https://www.behance.net/gallery/215416713/YA-Makan-Mobile-App">
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">E-commerce App</div>
                                 <p class="mb-0">A mobile app for a fashion brand that boosted their sales.</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="https://placehold.co/600x400/1D809F/FFFFFF?text=Project+1" alt="E-commerce App" />
+                        <img class="img-fluid" src="https://drive.google.com/file/d/1pjg6pZuKke75ZYZ4fEbV-dIWPRkR2Ic4/view?usp=drive_link" alt="Yamakan App" />
                     </a>
                 </div>
                 <!-- Project 2 -->
