--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
                         data-behance="https://www.behance.net/gallery/215416713/YA-Makan-Mobile-App">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2">E-commerce App</div>
+                                <div class="h2">Yamakan Ap</div>
                                 <p class="mb-0">A mobile app for a fashion brand that boosted their sales.</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="https://drive.google.com/file/d/1pjg6pZuKke75ZYZ4fEbV-dIWPRkR2Ic4/view?usp=drive_link" alt="Yamakan App" />
+                        <img class="img-fluid" src="https://github.com/AhmadMahdaly/AhmedMahdaly.github.io/blob/main/assets/yamakan.png" alt="Yamakan App" />
                     </a>
                 </div>
                 <!-- Project 2 -->
