--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 <p class="mb-0">A mobile app for a fashion brand that boosted their sales.</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="https://github.com/AhmadMahdaly/AhmedMahdaly.github.io/blob/main/assets/yamakan.png" alt="Yamakan App" />
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/yamakan.png" alt="Yamakan App" />
                     </a>
                 </div>
                 <!-- Project 2 -->
