--- a/index.html
+++ b/index.html
@@ -283,6 +283,102 @@
                     <a class="portfolio-item" href="#!"
                        data-bs-toggle="modal" 
                        data-bs-target="#portfolioModal"
+                       data-title="Booklink تبادل الكتب"
+                       data-video=""
+                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
+                       data-description="A user-friendly platform for exchanging, selling, and sharing books with ease. Discover available books near you, connect with fellow readers, and keep books in circulation instead of letting them collect dust on shelves.
+
+                        Key Features Implemented:
+                        • Book Exchange, Sale, and Sharing System: Allows users to list books for exchange or sale and manage their personal book listings directly from the app.
+                        • Location-Based Book Discovery: Users can browse books available nearby using geolocation and filter by categories such as fiction, history, education, or children's books.
+                        • Built-in Chat Feature: Enables direct communication between users to arrange meetings, discuss book conditions, or negotiate trades or sales.
+                        • Personal Book Shelf Management: Users can add, update, or remove book listings with images, descriptions, and availability status.
+                        • Favorites and Wish List: Lets users bookmark books they’re interested in, making it easy to revisit or contact owners later.
+                        • User Profiles and Reputation System: Each user has a profile showing their exchange history, ratings, and activity to build trust within the community.
+                        • Simple and Intuitive UI/UX: Clean interface with smooth navigation designed for a seamless browsing and communication experience.
+                        • Smart Filtering and Sorting Options: Users can filter books by distance, genre, condition, or recent uploads to quickly find what suits them.
+                        • Push Notifications: Notifies users when someone sends a message, a new book is listed nearby, or a saved book becomes available."
+                       data-google-play="https://play.google.com/store/apps/details?id=com.mahdaly.booklink"
+                       data-app-store=""
+                       data-behance="">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Booklink تبادل الكتب</div>
+                                <p class="mb-0">
+</p>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                    </a>
+                </div>
+                    <!-- Project 3 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="#!"
+                       data-bs-toggle="modal" 
+                       data-bs-target="#portfolioModal"
+                       data-title="Booking System"
+                       data-video=""
+                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
+                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
+                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
+                       data-app-store=""
+                       data-behance="">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Clinic Booking System</div>
+                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                    </a>
+                </div>
+                    <!-- Project 4 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="#!"
+                       data-bs-toggle="modal" 
+                       data-bs-target="#portfolioModal"
+                       data-title="Booking System"
+                       data-video=""
+                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
+                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
+                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
+                       data-app-store=""
+                       data-behance="">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Clinic Booking System</div>
+                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                    </a>
+                </div>
+                <!-- Project 5 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="#!"
+                       data-bs-toggle="modal" 
+                       data-bs-target="#portfolioModal"
+                       data-title="Booking System"
+                       data-video=""
+                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
+                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
+                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
+                       data-app-store=""
+                       data-behance="">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Clinic Booking System</div>
+                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                    </a>
+                </div>
+                    <!-- Project 6-->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="#!"
+                       data-bs-toggle="modal" 
+                       data-bs-target="#portfolioModal"
                        data-title="Booking System"
                        data-video=""
                        data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
