--- a/index.html
+++ b/index.html
@@ -184,6 +184,29 @@
                 clip-path: inset(0);
             }
         }
+ /* --- NEW: Floating WhatsApp Button --- */
+        .whatsapp-float {
+            position: fixed;
+            width: 60px;
+            height: 60px;
+            bottom: 40px;
+            right: 40px;
+            background-color: #25D366;
+            color: #FFF;
+            border-radius: 50px;
+            text-align: center;
+            font-size: 30px;
+            box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+            z-index: 100;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.2s;
+        }
+        .whatsapp-float:hover {
+            transform: scale(1.1);
+            color: #FFF;
+        }
     </style>
 </head>
 <body id="page-top">
@@ -552,6 +575,10 @@ Master Git & GitHub: Essential Skills for Developers[Arabic]</a></strong></h4>
             </div>
         </div>
     </div>
+    <!-- Floating WhatsApp Button -->
+    <a href="https://wa.me/201027705331" class="whatsapp-float" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
     <!-- Bootstrap core JS-->
