--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         data-bs-target="#portfolioModal"
                         data-title="Yamakan App"
                         data-video=""
-                        data-images="https://placehold.co/600x400/1D809F/white?text=App+Screenshot+1,https://placehold.co/600x400/1D809F/white?text=App+Screenshot+2"
+                        data-images="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/11.png,https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/12.png"
                         data-description="Developed a comprehensive mobile application to explore entertainment destinations and discover new activities across Egypt. The app allows users to browse hundreds of places, access curated tourist programs, discover nearby events, and make easy reservations.
 
                         Key Features Implemented:
@@ -353,11 +353,10 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">Booklink تبادل الكتب</div>
-                                <p class="mb-0">
-</p>
-                            </div>
+                                <p class="mb-0">A platform for easily exchanging, selling, and sharing books. Discover books available near you and connect with other readers — so that books keep circulating instead of gathering dust on shelves!
+</p>                            </div>
                         </div>
-                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/booklink%20Cover.jpg" alt="Booklink تبادل الكتب" />
                     </a>
                 </div>
                     <!-- Project 3 -->
