--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">Booklink تبادل الكتب</div>
-                                <p class="mb-0">A platform for easily exchanging, selling, and sharing books. Discover books available near you and connect with other readers — so that books keep circulating instead of gathering dust on shelves!
-</p>                            </div>
+                                <p class="mb-0">A platform for easily exchanging, selling, and sharing books.
                         </div>
                         <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/booklink%20Cover.jpg" alt="Booklink تبادل الكتب" />
                     </a>
