--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                        data-bs-target="#portfolioModal"
                        data-title="Booklink تبادل الكتب"
                        data-video=""
-                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
+                       data-images="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/6.png,https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/5.png"
                        data-description="A user-friendly platform for exchanging, selling, and sharing books with ease. Discover available books near you, connect with fellow readers, and keep books in circulation instead of letting them collect dust on shelves.
 
                         Key Features Implemented:
@@ -353,7 +353,8 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">Booklink تبادل الكتب</div>
-                                <p class="mb-0">A platform for easily exchanging, selling, and sharing books.
+                                <p class="mb-0">A platform for easily exchanging, selling, and sharing books.</p>
+                            </div>
                         </div>
                         <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/booklink%20Cover.jpg" alt="Booklink تبادل الكتب" />
                     </a>
