--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         .whatsapp-float {
             position: fixed;
             width: 60px;
-            height: 80px;
-            bottom: 40px;
+            height: 60px;
+            bottom: 80px;
             right: 40px;
             background-color: #25D366;
             color: #FFF;
@@ -359,11 +359,11 @@
                         <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/booklink%20Cover.jpg" alt="Booklink تبادل الكتب" />
                     </a>
                 </div>
-                    <!-- Project 3 -->
+                    <!-- Project 3
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="#!"
                        data-bs-toggle="modal" 
-                       data-bs-target="#portfolioModal"
+                       data-olioModal"
                        data-title="Booking System"
                        data-video=""
                        data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
@@ -379,70 +379,7 @@
                         </div>
                         <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
                     </a>
-                </div>
-                    <!-- Project 4 -->
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="#!"
-                       data-bs-toggle="modal" 
-                       data-bs-target="#portfolioModal"
-                       data-title="Booking System"
-                       data-video=""
-                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
-                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
-                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
-                       data-app-store=""
-                       data-behance="">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2">Clinic Booking System</div>
-                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
-                    </a>
-                </div>
-                <!-- Project 5 -->
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="#!"
-                       data-bs-toggle="modal" 
-                       data-bs-target="#portfolioModal"
-                       data-title="Booking System"
-                       data-video=""
-                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
-                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
-                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
-                       data-app-store=""
-                       data-behance="">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2">Clinic Booking System</div>
-                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
-                    </a>
-                </div>
-                    <!-- Project 6-->
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="#!"
-                       data-bs-toggle="modal" 
-                       data-bs-target="#portfolioModal"
-                       data-title="Booking System"
-                       data-video=""
-                       data-images="https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+1,https://placehold.co/600x400/E83E8C/white?text=Booking+Screenshot+2"
-                       data-description="Created a cross-platform booking application for a local chain of clinics. The app allows patients to schedule appointments, receive reminders, and view their medical history, reducing no-shows by 25%."
-                       data-google-play="YOUR_GOOGLE_PLAY_LINK_HERE"
-                       data-app-store=""
-                       data-behance="">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2">Clinic Booking System</div>
-                                <p class="mb-0">An app that simplifies appointment scheduling for patients.</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
