--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                        data-bs-toggle="modal" 
                        data-bs-target="#portfolioModal"
                        data-title="Entalek"
-                       data-video=""
+                       data-video="https://www.youtube.com/embed/6s7CrDNYKqU"
                        data-images="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/4.png,https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/3.png"
                        data-description="Entalek is your all-in-one platform for ride-hailing and package delivery, designed to streamline daily operations for businesses:
 Ride-Hailing: Fast and reliable car booking with real-time tracking and transparent pricing.
